--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cookies-next": "^5.0.2",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "force": "^0.0.3",
     "framer-motion": "^11.18.2",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
